Fix copy to clipboard.
Mozilla Firefox only accept clipboard interactions triggered by user click
event. That's what I did, but parsing all my rows before copying took
too long and when it was done, Firefox saw it as a new interaction with
the clipboard that wasn't made by the user. Hence why the interaction
was blocked.

--- a/static/css/allen_brain_connectivity.css
+++ b/static/css/allen_brain_connectivity.css
@@ -62,9 +62,15 @@
 }
 
 .columns-vis {
-    color: black
+    color: black;
 }
 
 .columns-vis>ul>li {
-    color: black
+    color: black;
+}
+
+.copy-ids-group {
+    display: none;
+    min-width: 50px;
+    max-width: 400px;
 }
